# crm-dashboard

./: Makefile  README.md  docker-compose.yml
fastapi_backend/: .env.example  pyproject.toml  requirements.txt  start.sh  vercel.json
fastapi_backend/alembic_migrations/versions/: 123456789abc_add_internal_notes_to_students.py  987654321def_add_communication_logs_table.py  ebb4363b394a_add_student_column.py  fc00fee8709d_update_the_students_table.py
fastapi_backend/app/: ai_service.py  config.py  database.py  main.py  models.py  schemas.py  users.py
fastapi_backend/app/routes/: students.py
fastapi_backend/tests/: conftest.py  test_database.py  test_email.py
fastapi_backend/tests/main/: test_main.py
fastapi_backend/tests/routes/: test_items.py
fastapi_backend/tests/utils/: test_utils.py
nextjs-frontend/: openapi.json  package.json  pnpm-lock.yaml  tailwind.config.js
nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/app/dashboard/: StudentDirectory.tsx  StudentDirectorySummary.tsx  layout.tsx  page.tsx
nextjs-frontend/app/dashboard/student/[studentId]/: page.tsx
nextjs-frontend/app/login/: page.tsx
nextjs-frontend/components/actions/: login-action.ts  register-action.ts
nextjs-frontend/lib/api/: students.ts
nextjs-frontend/lib/constants/: tagColors.ts
